...

/* Button label for OK action */
"action.ok" = "OK";

/* Title for text zoom menu item.  %d%% is replaced with percent, e.g. 56% so do not change that please. */
...

/* Autofill Logins menu item opening the login list */
"action.title.autofill.logins" = "Passwords";

/* Confirmation of Add to Bookmarks action in Add All Open Tabs to Bookmarks alert */
...

/* Create New Tab action */
"action.title.newTabAction" = "New Tab";

/* Open in New Tab action */
...

/* Save action - button shown in alert */
"action.title.save" = "Save";

/* Add to Bookmarks action */
...

/* Settings action */
"action.title.settings" = "Settings";

/* Share action */
...

/* Title for sync error alert */
"alert.sync-error" = "Sync & Backup Error";

/* Sync error alert action button title, takes the user to the sync settings page. */
...

/* Authentication Password field placeholder */
"auth.alert.password.placeholder" = "Password";

/* Authentication Alert Title */
...

/* Delete button when deleting an autofill credit card */
"autofill.creditcard.details.delete" = "Delete Card";

/* Autofill alert button confirming delete credit card */
...

/* Title for screen listing autofill credit cards */
"autofill.creditcard.list.title" = "Credit Cards";

/* Title for view displayed when autofill is locked on devices where a passcode has not been set */
...

/* Button title to dismiss the autofill extension activation view */
"autofill.extension.activation.done.button.title" = "Done";

/* Title shown when the autofill extension activation succeeds */
...

/* Delete button when deleting an autofill login */
"autofill.logins.details.delete" = "Delete Password";

/* Autofill alert button confirming delete autofill login */
...

/* Placeholder for url field on autofill login details */
"autofill.logins.details.edit.url-placeholder" = "example.com";

/* Placeholder for userbane field on autofill login details */
...

/* Title for close navigation button */
"autofill.logins.list.close-title" = "Close";

/* Title for button to delete all saved autofill passwords */
...

/* Title for autofill login prompt */
"autofill.logins.prompt.title" = "Use a saved password?";

/* Subtitle displayed when there are no results on Autofill search, example : No Result (Title) for Duck (Subtitle) */
...

/* Title for prompt to use suggested strong password for creating a login */
"autofill.password-generation-prompt.title" = "Use a strong password from DuckDuckGo?";

/* Button title choosing to use the suggested generated password for creating a login */
"autofill.password-generation-prompt.use-generated-password.cta" = "Use Strong Password";

/* Button title choosing to use own password for creating a login */
...

/* This describes empty tab */
"homeTab.searchAndFavorites" = "Search or enter address";

/* Home tab title */
...

/* No comment provided by engineer. */
"keyCommandBrowserBack" = "Browse Back";

/* No comment provided by engineer. */
"keyCommandBrowserForward" = "Browse Forward";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"menu.button.hint" = "Browsing Menu";

/* The name of the Address Bar button when referenced in settings. */
...

/* The title of the notifications shown from VPN */
"network.protection.notification.title" = "DuckDuckGo";

/* Title text for an iOS quick action that opens VPN settings */
...

/* The name of a settings subsection related to the data clearing */
"settings.data.clearing" = "Data Clearing";

/* Data Clearing settings header description */
...

/* Settings screen cell text for passwords */
"settings.logins" = "Passwords & Autofill";

/* The name of the settings section containing main settings */
...

/* Tab Switcher Accessibility Label */
"tab.switcher.accessibility.label" = "Tab Switcher";

/* Bookmark all tabs menu item */
...
