...
    static let mainMenuWindowMergeAllWindows = NSLocalizedString("Merge All Windows", comment: "Main Menu Window item")
    static let mainMenuWindowShowPreviousTab = NSLocalizedString("Show Previous Tab", comment: "Main Menu Window item")
    static let mainMenuWindowShowNextTab = NSLocalizedString("Show Next Tab", comment: "Main Menu Window item")
    static let mainMenuWindowBringAllToFront = NSLocalizedString("Bring All to Front", comment: "Main Menu Window item")

    // MARK: - Main Menu -> Help
    static let mainMenuHelp = NSLocalizedString("Help", comment: "Main Menu Help")
    static let mainMenuHelpDuckDuckGoHelp = NSLocalizedString("DuckDuckGo Help", comment: "Main Menu Help item")

    // MARK: - History
    static let historyViewOnboardingTitle = NSLocalizedString("history.view.onboarding.title", value: "Easier History Management", comment: "Title for the history view onboarding popover")

    static func historyViewOnboardingMessage(shortcut: String) -> String {
...
