...
    var columnName: String
    var items: [String]
}

#Preview {
    let fakeRows1 = (1...10).map { index in
        DataBrokerDatabaseBrowserData.Row(data: ["Name": "John Doe", "Age": Int.random(in: 20…60), "Email": "john.doe\(index)@example.com"])
    }
    let fakeTable1 = DataBrokerDatabaseBrowserData.Table(name: "Users", rows: fakeRows1)

    let fakeRows2 = (1...10).map { index in
        DataBrokerDatabaseBrowserData.Row(data: ["Product": "Product \(index)", "Price": Double.random(in: 10…100), "Quantity": Int.random(in: 1...10)])
    }
...
