...
            "value" : "Deine Daten sind synchronisiert!"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Your data is synced!"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "¡Tus datos están sincronizados!"
...
