...
                    if device.isThisDevice {
                        Text(UserText.syncedDevicesThisDeviceLabel)
                            .foregroundColor(.secondary)
                    }
                }
            }
            .accessibility(identifier: "device")
        }
        .listRowBackground(Color(designSystemColor: .surface))
    }

    @ViewBuilder
    func devices() -> some View {
...
