...
            "value" : "Открыть системные настройки..."
          }
        }
      }
    },
    "network.protection.onboarding.allow.extension.desc.allow" : {
      "comment" : "'Allow' word between the prefix and suffix for the onboarding allow-extension description",
      "extractionState" : "extracted_with_value",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zulassen"
...
