# state_restoration.yaml
appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - release

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn:
    id: "searchEntry"
- inputText: "https://duckduckgo.com"
- pressKey: Enter

# Create navigation stack
- assertVisible: 'DuckDuckGo.*'
- scrollUntilVisible:
    element: "Help"
    timeout: 50000
    speed: 100
- tapOn: 
    text: 'Help'
- assertVisible: "DuckDuckGo Help Pages"
# - scrollUntilVisible:
#     element: "Privacy Policy"
#     timeout: 50000
#     speed: 100
# # Tap status bar to make sure bottom bar is visible
# - tapOn:
#     point: 90%, 1%
- tapOn: "Browse Back"
- assertVisible: "DuckDuckGo.*"

# Load a new tab
- tapOn: "Tab Switcher"
- tapOn: "New Tab"
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://example.com"
- pressKey: Enter

- assertVisible: ".*Example Domain.*"

- stopApp
- launchApp:
    arguments:
        isRunningUITests: true

- tapOn:
    text: "Tab Switcher"
    retryTapIfNoChange: true
- tapOn:
    point: 20%, 25%

# Check if state from previous session was restored
- assertVisible: "DuckDuckGo.*"
- tapOn: "Browse Forward"
- doubleTapOn:
    point: 50%, 1%
- assertVisible: "DuckDuckGo Help Pages"
