# password-authentication.yaml
appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - release

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Validate passcode requested when accessing passwords for the first time
- tapOn: "Browsing Menu"
- tapOn: "Settings"
- scrollUntilVisible:
    element: "Passwords & Autofill"
    direction: DOWN
- tapOn: "Passwords & Autofill"
- tapOn: "Passwords"

# Add an item
- tapOn: "Add 24"
- tapOn:
    id: "Field_PasswordName"
- inputText: "Example"
- pressKey: Enter

- tapOn: "Save"
- tapOn: "Passwords"
- tapOn: "Passwords & Autofill"
- tapOn: "Settings"
- tapOn: "Done"

# Validate initial authentication
- tapOn: "Browsing Menu"
- tapOn: "Settings"
- scrollUntilVisible:
    element: "Passwords & Autofill"
    direction: DOWN
- tapOn: "Passwords & Autofill"
- tapOn: "Passwords"

- runFlow:
    file: ../shared/dismiss_application_lock.yaml
- assertVisible: "Passwords"

# Validate authentication after backgrounding from home screen
- tapOn: "Passwords & Autofill"
- tapOn: "Settings"
- tapOn: "Done"

- pressKey: HOME

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "DuckDuckGO"

- tapOn: "Browsing Menu"
- tapOn: "Settings"
- scrollUntilVisible:
    element: "Passwords & Autofill"
    direction: DOWN
- tapOn: "Passwords & Autofill"
- tapOn: "Passwords"

- runFlow:
    file: ../shared/dismiss_application_lock.yaml
- assertVisible: "Passwords"

# Validate authentication after backgrounding from password screen
- pressKey: HOME

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "DuckDuckGO"

- runFlow:
    file: ../shared/dismiss_application_lock.yaml
- assertVisible: "Passwords"

- tapOn: "Passwords & Autofill"
- tapOn: "Settings"
- tapOn: "Done"

# Validate launch from widget
# Disabled until we can get iOS 17.2 runner on mobile.dev (or our own CI)
# - pressKey: HOME
# - longPressOn:
#     point: 50%,50%
# - tapOn: "Add Widget"
# - tapOn: "Search Widgets"
# - inputText: "DuckDuck"
# - tapOn: "DuckDuckGo"
# - tapOn: "Page 1 of 5"
# - tapOn: " Add Widget"
# - tapOn: "Done"
# - tapOn:
#     id: "DuckDuckGo"
#     index: 0

# - assertVisible: "Unlock device to access passwords"
# - inputText: "Anything"
# - pressKey: Enter
# - assertVisible: "Search passwords"
