# password-autofill.yaml
appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - release

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Capture login credentials
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site/autofill/autoprompt/0-standard-signup-form.html"
- pressKey: Enter

- assertVisible: "Password generation during signup"
- tapOn: 
    text: "Email"
- inputText: "test@example.com"
- tapOn: 
    text: "Password"
- assertVisible: "Use a strong password from DuckDuckGo?"
- tapOn: 
    text: "Use Strong Password"
- tapOn:
    text: "Sign up"
- assertVisible: "Success"

# Validate passcode requested when accessing passwords for the first time
- runFlow:
    file: ../shared/open_browsing_menu_item.yaml
    env:
      ITEM: "Passwords"
- runFlow:
    file: ../shared/dismiss_application_lock.yaml

# Validate it was saved 
- assertVisible: "Passwords"
- assertVisible: "privacy-test-pages.site"
- assertVisible: "test@example.com"

- tapOn: "Close"

# Validate standard form
- assertVisible:
    id: "searchEntry"
- tapOn:
    id: "searchEntry"
- runFlow:
    file: ../shared/delay.yaml
- inputText: "https://privacy-test-pages.site/autofill/autoprompt/1-standard-login-form.html"
- pressKey: Enter

- assertVisible: "Use a saved password?"
- assertVisible: "test@example.com"
- tapOn: "test@example.com"

- runFlow:
    file: ../shared/dismiss_application_lock.yaml

- assertVisible: "Submitted!"

# Validate multistep form
- tapOn: 
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site/autofill/autoprompt/3-multistep-form.html"
- pressKey: Enter
- runFlow:
    file: ../shared/delay.yaml

- assertVisible: "Use a saved password?"
- assertVisible: "test@example.com"
- tapOn: "test@example.com"

- runFlow:
    file: ../shared/dismiss_application_lock.yaml

- assertVisible: "Password"
- tapOn: "Password"

- assertVisible: "Use a saved password?"
- assertVisible: "test@example.com"
- tapOn: "test@example.com"

- assertVisible: "Submitted!"
