appId: com.duckduckgo.mobile.ios
---

- tapOn: Browsing menu
- tapOn: Settings
- scrollUntilVisible:
    element: Passwords & Autofill
- tapOn: Passwords & Autofill
- tapOn: Credit Cards

- runFlow:
    file: ../shared/dismiss_application_lock.yaml

- tapOn: Maestro Test Card
- tapOn: Delete Card
- tapOn: Delete Card
- tapOn: Credit Cards
- tapOn: Passwords & Autofill
- tapOn: Settings
- tapOn: Done
