appId: com.duckduckgo.mobile.ios
---

- tapOn: Browsing menu
- tapOn: Settings
- scrollUntilVisible:
    element: Passwords & Autofill
- tapOn: Passwords & Autofill
- tapOn: Passwords

- runFlow:
    file: ../shared/dismiss_application_lock.yaml

- tapOn:
    id: Button_DismissImportPromo
    optional: true
- tapOn: My Personal Website
- tapOn: Delete Password
- tapOn: Delete Password
- tapOn: Passwords & Autofill
- tapOn: Settings
- tapOn: Done
