appId: com.duckduckgo.mobile.ios
---

- tapOn: Sync & Backup
- assertVisible: Sync & Backup 
- tapOn: Sync and Back Up This Device

- runFlow:
    file: ../shared/dismiss_application_lock.yaml
    
- assertVisible: You can sync with your other devices later.
- tapOn: Turn On Sync & Backup
- assertVisible: Recover Your Data Easily
- tapOn: Copy Code
- tapOn: Next
- assertVisible: Your data is synced!
- tapOn: Done
- assertVisible: Sync Enabled
