appId: com.duckduckgo.mobile.ios
---

- assertVisible: Begin Syncing
- tapOn: Sync With Another Device

- runFlow:
    file: ../shared/dismiss_application_lock.yaml

- runFlow:
    when:
      visible: Allows you to upload photographs and videos
    commands:
        - tapOn: "Allow"
- assertVisible: Scan QR Code
- tapOn: Manually Enter Code
- tapOn: Paste
- assertVisible: Recover Your Data Easily
- tapOn: Next
- assertVisible: Your data is synced!
- tapOn: Done
- assertVisible: Sync Enabled
- assertVisible: 
    id: "device"
    index: 1